--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/4.0.1/socket.io.js"></script>
     <script>
-        const socket = io('https://a46f-2409-40e3-1018-f665-ad66-3153-5942-4214.ngrok-free.app/'); // Replace with your server address
+        const socket = io('https://localhost:3000/'); // Replace with your server address
 
         socket.on('connect', () => {
             console.log('Connected to server');
